New keys added to CSV file and cards ready to be translated

--- a/Proyecto Investigacion - UADE/Assets/Resources/Languages/en.txt
+++ b/Proyecto Investigacion - UADE/Assets/Resources/Languages/en.txt
@@ -44,3 +44,149 @@ L_WATER=Lost water. Leaks
 INDUSTRY=Industry
 BIOSOLIDS=Biosolids
 AGRICULTURE=Agriculture
+C1=Conservation. Pollution control measures
+C2=Investing in natural infrastructure
+C3=Payments for eco-system services
+C4=Incentives for natural infrastructure
+C5=Reduction in Water consumption
+C6=ROI for natural infrastructure
+C7=Rainwater harvesting
+C8=Legislation for usage of rainwater
+C9=Domestic collection and treatment
+C10=Greywater recycling for Non-potable Reuse
+C11=Mandate recycling of greywater
+C12=Incentives to recycle greywater through pricing
+C13=Greywater for agriculture and aquaculture
+C14=Greywater for agriculture and aquaculture
+C15=Greywater. Demand from agriculture sector
+C16=Reused for agriculture and aquaculture
+C17=Reused for agriculture and aquaculture
+C18=Reused. Demand from agriculture sector
+C19=Reused water for industry
+C20=Reused for cooling towers
+C21=Standards in food and beverage sector
+C22=Water recycling scheme for Industry
+C23=Recycling hot used water
+C24=Directed potable reuse
+C25=Regulation for Directed potable reuse
+C26=Consumer acceptability for direct potable reuse
+C27=Leakage / Water loss
+C28=ROI for reducing water loss
+C29=Resource efficiency withing facilities
+C30=Standards for reused products
+C31=Sales agreements to return materials
+C32=Struvite from used water sludge
+C33=Ensuring safety of reuse in legislation
+C34=Consistent product quality
+C35=Costs of landfill and phosphorus products
+C36=Organic waste added to used water sludge
+C37=Local permits for organic waste materials
+C38=Prices on treatments of organic waste
+C39=Recycling of sludge from drinking water production
+C40=Chemicals production in treatment plants
+C41=Categorisation of a product: waste or resource
+C42=Solution for consumer acceptability. 
+C43=Categorisation of a product: waste or resource
+C44=Solution to the disgust-factor
+C45=Categorisation of a product: waste or resource
+C46=Assurance on the quality of the material
+C47=Directive for a specific product certificate 
+C48=Constant quality of materials
+C49=Categorisation of a product: waste or resource
+C50=Market advantage. Renewable production
+C51=Limits on discharge to sewers
+C52=Cost of disposal and recovered metal
+C53=Resources recovered for Human health products
+C54=Solution to the disgust-factor
+C55=Nitrogen ammonia from used water
+C56=Recover sulphur from the biogas
+C57=Methane from anaerobic digestion 
+C58=Carbon dioxide from gas reuse
+C59=Promote as pathogen free
+C60=Reduce overall energy consuption
+C61=Carbon tax / pricing
+C62=More efficient appliances
+C63=Mandated water savings initiatives
+C64=Micro turbines to produce energy
+C65=Legislation for energy efficiency (Distribution systems)
+C66=Heat exchangers on sewage pipes
+C67=Government subsidies, funding, Carbon tax
+C68=Biosolids to energy production
+C69=Legislation for energy efficiency (Biosolids)
+C70=Cost of alternative management
+C71=Wind, Solar, Geothermal energies
+C72=Taxes and subsidies related to fossil fuels
+C73=Cost and availability of renewable energy compared to fossil fuels
+D1=Reduced operating expenditure related to treatment processes. sediments minimisation, storm water runoff regulation, flood impacts reduction, carbon sequestration, food production, water purification, water temperature control
+D2=Offset capital expenditure for conventional built infrastructure 
+D3=Regulatory Levers. Inclusion of payments for eco-system services in tariffs
+D4=Regulatory Levers. Incentives for natural infrastructure options
+D5=Regulatory Levers. Tariffs that support efficient and sustainable water use. Utilities partner with industry provide advisory services related to water efficient domestic appliances
+D6=Market Levers. Demonstration of ROI for natural infrastructure
+D7=Reducing soil erosion and contamination of surface water with pesticides and fertilisers from rainwater run-off, wich results in cleaner lakes and ponds. Contributing to demand management of main supplies and localised flood control
+D8=Regulatory Levers. Removing legislation that forbids usage of rainwater, and instead permit household-level treatment of rainwater
+D9=Market Levers. Need to create consumer demand; domestic collection and treatment systems need to be cost-effective, with short payback time
+D10=Contributing to demand management of main supplies. Water utilities providing equipment, advice and other services related to installation and maintenance for domestic and industrial buildings
+D11=Regulatory Levers. Mandate recycling of greywater in high rise buildings and intensive developments
+D12=Market Levers. Creating consumer demand. Incentives to recycle greywater through pricing. Domestic collection and treatment systems need to be cost-effective, with short payback time
+D13=Saves water and fertiliser costs, cheaper and nutrient rich water used for irrigation. Excludes detergent rich greywater from dishwashers, washing machines and kitchen sinks
+D14=Regulatory Levers. Establishment of national health-based standards, encompassing preventative, risk based management approaches. Based on international guidelines such as the WHO Guidelines for the safe use of wastewater, excreta and greywater
+D15=Market Levers. Creating demand from agriculture sector
+D16=Saves water and fertiliser costs. Used water equieres primary and secondary treatment
+D17=Regulatory Levers. Establishment of national health-based standards, encompassing preventative, risk based management approaches. Based on international guidelines such as the WHO Guidelines for the safe use of wastewater, excreta and greywater
+D18=Market Levers. Creating demand from agriculture sector
+D19=Contributing to demand management of main supplies. Industrial processes that utilise reclaimed water include evaporative cooling, boiler feed, washing and mixing
+D20=Regulatory Levers. Establishment of national health standards for use in cooling towers
+D21=Regulatory Levers. Industry standards in the food and beverage sector
+D22=Market Levers. Water recycling scheme will reduce the cost for purchased water. Used water disposal will reduce the amount of chemical used for cleannig
+D23=Market Levers. Recycling may reduce heating needs, if hot used water is recycled
+D24=Contributing to demand management of main supplies. Less Energy intensive than desalination. The reclaimed water is treated to drinking water standards and then diluted with the drinking water into the network
+D25=Regulatory Levers. Establishment of national health-based standards, encopassing preventative, risk-based management approaches
+D26=Market Levers. Consumer acceptability is critical for direct potable reuse. Significant barriers exist with regards to consumer acceptance and regulations
+D27=Regulatory Levers. Incentives to reduce water loss and maintain low levels, pre-requisite for tariff adjustments
+D28=Market Levers. Utilities needs a ROI for reducing water loss and maintaining low levels. Innovative contracting and partnership models that reward loss reduction that meets or exceeds agreed targets
+D29=Resource efficiency withing the water and wastewater treatment plant (e.g. Adjusting pH to use less coagulant)
+D30=Regulatory Levers. Resource efficiency. Requirements/standards regarding hygiene of end product (often unnecessarily high). Certificates analogous to primary product
+D31=Market Levers. Resource efficiency. As part of sales agreements to make it mandatory to return materials or chemicals back to the supplier after use
+D32=Used water sludge and products for agriculture. To use used water sludge to produce Struvite (a pathogen free phosphate mineral)
+D33=Regulatory Levers. Ensuring safety through inclusion of reuse in legislation. Change fertiliser standards as they are very high and even most mineral fertilisers rarely fulfil them
+D34=Market Levers. Used water sludge and products for agriculture. Consistent product quality (buyers need to know quality)
+D35=Market Levers. Used water sludge and products for agriculture. Increasing costs of landfill and other thermal options may drive more use to agriculture. Fertilisers and other phosphorus products from used water need to be a low cost solution for farmers to consider biosolids use
+D36=To add municipal organic waste to anaerobic digestion. Obtain a higher production of biogas
+D37=Regulatory Levers. Organic waste added to used water sludge. Local permits that allow other materials than biosolids as a resource
+D38=Market Levers. Organic waste added to used water sludge. Prices on others treatments of organic waste and competition of buying waste from other users / sectors
+D39=Drinking water sludge to agriculture or industry. Incentivise recycling of sludge from drinking water production. Provide additional water and also another revenue stream from the sale of commodity chemicals. The amount varies, depending on the king of water being treated and the type of treatement, especially coagulation with iron and aluminium.
+D40=Market Levers. Drinking water sludge to agriculture or industry. Finding suitable niche markets. Water and chemicals production in treatment plants. 
+D41=Regulatory Levers. Bioplastics. Modify the categorisation of a product as waste or a resource. The product status or certification, is a main barrier
+D42=Regulatory Levers. Bioplastics. Finding a solution for consumer acceptability. As the plastic is biodegradable and from renewable plastics production it will have and advantage in the market
+D43=Regulatory Levers. Fertiliser (non-agricultural). Modify the categorisation of a product as waste or a resource. Nutrients extracted from the used water
+D44=Market Levers. Fertiliser (non-agricultural). Finding a solution to the disgust-factor. Niche market opportunities are important to take into account
+D45=Regulatory Levers. Paper & Cellulose. Modify the categorisation of a product as waste or a resource. Limitations on disposal of solid wastes to landfill could also trigger more recovery
+D46=Market Levers. Paper & Cellulose. Assurance on the quality of the material. Finding a solution for consumer acceptability. Regards to: high cellulose content, no pathogens/medicine residuals/hormones, low on metals
+D47=Regulatory Levers. Building materials. Products listed or incorporated into product specification and assessment. Products such as concrete tiles
+D48=Market Levers. Building materials. Constant quality, both chemicals and physical can add a value
+D49=Regulatory Levers. Proteins & Feed. Modify the categorisation of a product as waste or a resource
+D50=Market Levers. Proteins & Feed. Purity as well as high protein density. The product has a market advantage as the protein comes from renewable production
+D51=Regulatory Levers. Metals & Minerals. Trade waste limits on discharge to sewers. Limitation on disposal of heavy metals to landfill
+D52=Market Levers. Metals & Minerals. Minimising cost of disposal and recovered cost in the metal recovered. Guarantee on constant quality
+D53=Human health products. Utilised resources recovered for pharmaceutical and medical purposes, supplement and wellness products. A major challenge is that every industry has diferent indicators, and streamlining would make it easier to develop a market
+D54=Market Levers. Human health products. Finding a solution to the disgust-factor. Finding a niche market
+D55=Effluent Gas reuse. Stripped nitrogen ammonia from used water to produce ammonium sulphate
+D56=Effluent Gas reuse. Recover sulphur from the biogas of anaerobic digestion. Sulphur can be used as a fertiliser, for rubber production or as a catalyst in industrial processes
+D57=Effluent Gas reuse. Methane from anaerobic digestion utilised to produce energy
+D58=Effluent Gas reuse. Used as a coolant, as acid replacement, for producing calcium carbonate and as a carbon source for growing algae
+D59=Market Levers. Effluent Gas reuse. Promote as pathogen free, this helps removing the barriers to consumer acceptability
+D60=Optimising operations at treatment plants and trough distribution networks. Smart systems that enable data collection and analytics can be useful tools to identify improvement potential
+D61=Regulatory Levers. Energy saving at treatment plants & distribution systems. Carbon tax / pricing. Incentives for adopting energy saving technologies
+D62=Energy reduction and recovery at home. More efficient appliances: washing machines, heat exchangers for showers. Smart metering at end users
+D63=Regulatory Levers. Energy reduction and recovery at home
+D64=Electricity produced from distribution systems. Adding micro turbines to produce energy from pressure reduction valves
+D65=Regulatory Levers. Electricity and Heat produced from distribution systems. State and national legislation related to energy efficiency. Government subsidies. Funding from government. Carbon tax
+D66=Recover heat. Heat produced from distribution systems
+D67=Market Levers. Heat produced from distribution systems. Government subsidies. Funding from government. Carbon tax
+D68=Treated wastewater sludge. Pyrolisis, Combustion of biosolids, Biogas production, Gasification
+D69=Regulatory Levers. Biosolids to energy production. State and national legislation related to energy efficiency. Carbon tax
+D70=Market Levers. Biosolids to energy production. Cost of alternative management / disposal routes. Reduced landfill cost by diverting organic wastes to digestion. Stabilised biosolids for reuse
+D71=Utilities produce their own off-grid renewable energy. Wind turbines, solar panels or geothermal energy
+D72=Regulatory Levers. Taxation and subsidies related to fossil fuels. State and national lagislation related to energy efficiency and greenhouse gas reduction
+D73=Market Levers. Cost and availability of renewable energy compared to fossil fuels
