--- a/Proyecto Investigacion - UADE/Assets/Resources/Languages/sp.txt
+++ b/Proyecto Investigacion - UADE/Assets/Resources/Languages/sp.txt
@@ -44,3 +44,149 @@ L_WATER=Agua perdida. Fugas
 INDUSTRY=Industria
 BIOSOLIDS=Biosolidos
 AGRICULTURE=Agricultura
+C1=Conservación. Medidas de control de la contaminación
+C2=Invertir en infraestructura natural
+C3=Pagos por servicios del ecosistema
+C4=Incentivos a la infraestructura natural
+C5=Reducción del consumo de agua
+C6=ROI para infraestructura natural
+C7=Cosecha de agua de lluvia
+C8=Legislación para el uso de agua de lluvia
+C9=Recolección y tratamiento doméstico
+C10=Reciclaje de aguas grises para reutilización no potable
+C11=Reciclaje de aguas grises obligatorio
+C12=Incentivos para reciclar aguas grises a través de precios
+C13=Aguas grises para agricultura y acuicultura
+C14=Aguas grises para agricultura y acuicultura
+C15=Agua gris. Demanda del sector agrícola
+C16=Agua reutilizada para agricultura y acuicultura
+C17=Agua reutilizada reutilizado para agricultura y acuicultura
+C18=Agua reutilizada. Demanda del sector agrícola
+C19=Agua reutilizada para la industria
+C20=Agua reutilizada para torres de enfriamiento
+C21=Estándares en el sector de alimentos y bebidas
+C22=Esquema de reciclaje de agua para la industria
+C23=Reciclaje de agua caliente usada
+C24=Reutilización potable directa
+C25=Reglamento para la reutilización potable directa
+C26=Aceptabilidad del consumidor para la reutilización potable directa
+C27=Fugas / Pérdida de agua
+C28=ROI para reducir la pérdida de agua
+C29=Eficiencia de recursos dentro de las instalaciones
+C30=Estándares para productos reutilizados
+C31=Acuerdos de venta para devolución de materiales
+C32=Estruvita de lodos de agua usados
+C33=Garantizar la seguridad de la reutilización en la legislación
+C34=Calidad constante del producto
+C35=Costos de landfill y productos de fósforo
+C36=Residuos orgánicos agregados a lodos de agua usados
+C37=Permisos locales para residuos orgánicos
+C38=Precios en tratamientos de residuos orgánicos
+C39=Reciclaje de lodos de la producción de agua potable
+C40=Producción de químicos en plantas de tratamiento
+C41=Categorización de un producto: residuo o recurso
+C42=Solución para la aceptabilidad del consumidor.
+C43=Categorización de un producto: residuo o recurso
+C44=Solución al factor de disgusto
+C45=Categorización de un producto: residuo o recurso
+C46=Garantía de la calidad del material
+C47=Directiva para un certificado de producto específico
+C48=Calidad constante de materiales
+C49=Categorización de un producto: residuo o recurso
+C50=Ventaja de mercado. Producción renovable
+C51=Límites de descarga a alcantarillado
+C52=Costo de disposición y metal recuperado
+C53=Recursos recuperados para productos de salud humana
+C54=Solución al factor de disgusto
+C55=Nitrógeno amoniacal de agua usada
+C56=Recuperar azufre del biogás
+C57=Metano de la digestión anaeróbica
+C58=Dióxido de carbono de la reutilización de gas
+C59=Promocionar como libre de patógenos
+C60=Reducir el consumo total de energía
+C61=Impuesto al carbono / Precio
+C62=Electrodomésticos más eficientes
+C63=Obligatoriedad en ahorro de agua
+C64=Micro turbinas para producir energía
+C65=Legislación de eficiencia energética (sistemas de distribución)
+C66=Intercambiadores de calor en tuberías de aguas residuales
+C67=Subsidios gubernamentales, financiamiento, impuesto al carbono
+C68=Biosólidos para la producción de energía
+C69=Legislación de eficiencia energética (Biosólidos)
+C70=Costo de manejo alternativo
+C71=Energías eólica, solar, geotérmica
+C72=Impuestos y subsidios relacionados con los combustibles fósiles
+C73=Costo y disponibilidad de energía renovable
+D1=Reducción de los gastos operativos relacionados con los procesos de tratamiento. minimización de sedimentos, regulación de la escorrentía de aguas pluviales, reducción de impactos de inundaciones, secuestro de carbono, producción de alimentos, purificación de agua, control de temperatura del agua
+D2=Gastos de capital compensados ??para infraestructura construida convencional
+D3=Regulación. Inclusión de pagos por servicios ecosistémicos en las tarifas
+D4=Regulación. Incentivos para opciones de infraestructura natural
+D5=Regulación. Tarifas que apoyan el uso eficiente y sostenible del agua. Las empresas de servicios públicos se asocian con la industria para brindar servicios de asesoramiento relacionados con los electrodomésticos que ahorran agua
+D6=Mercado. Demostración del ROI para infraestructura natural
+D7=Reducir la erosión del suelo y la contaminación del agua superficial con pesticidas y fertilizantes provenientes de la escorrentía del agua de lluvia, lo que da como resultado lagos y estanques más limpios. Contribuir a la gestión de la demanda de los principales suministros y al control de inundaciones localizadas
+D8=Regulación. Eliminar la legislación que prohíbe el uso de agua de lluvia y, en su lugar, permite el tratamiento del agua de lluvia a nivel doméstico
+D9=Mercado. Necesidad de crear demanda de los consumidores; Los sistemas domésticos de recolección y tratamiento deben ser rentables, con un tiempo de recuperación corto.
+D10=Contribuir a la gestión de la demanda de los principales suministros. Empresas de agua que proporcionan equipos, asesoramiento y otros servicios relacionados con la instalación y el mantenimiento de edificios domésticos e industriales.
+D11=Regulación. Obligar el reciclaje de aguas grises en edificios de gran altura y desarrollos intensivos
+D12=Mercado. Creando demanda de los consumidores. Incentivos para reciclar aguas grises a través de precios. Los sistemas domésticos de recolección y tratamiento deben ser rentables, con un tiempo de recuperación corto
+D13=Ahorra costos de agua y fertilizantes, agua más barata y rica en nutrientes usada para riego. Excluye las aguas grises ricas en detergente de lavavajillas, lavadoras y fregaderos de cocina
+D14=Regulación. Establecimiento de estándares nacionales basados ??en la salud, que abarquen enfoques de gestión preventivos basados ??en riesgos. Basado en directrices internacionales como las Directrices de la OMS para el uso seguro de aguas residuales, excretas y aguas grises.
+D15=Mercado. Creando demanda del sector agrícola
+D16=Ahorra costos de agua y fertilizantes. El agua usada equivale a un tratamiento primario y secundario
+D17=Regulación. Establecimiento de estándares nacionales basados ??en la salud, que abarquen enfoques de gestión preventivos basados ??en riesgos. Basado en directrices internacionales como las Directrices de la OMS para el uso seguro de aguas residuales, excretas y aguas grises.
+D18=Mercado. Creando demanda del sector agrícola
+D19=Contribuir a la gestión de la demanda de los principales suministros. Los procesos industriales que utilizan agua recuperada incluyen enfriamiento por evaporación, alimentación de calderas, lavado y mezclado.
+D20=Regulación. Establecimiento de estándares nacionales de salud para uso en torres de enfriamiento
+D21=Regulación. Estándares de la industria en el sector de alimentos y bebidas
+D22=Mercado. El esquema de reciclaje de agua reducirá el costo del agua comprada. La eliminación del agua usada reducirá la cantidad de productos químicos utilizados para la limpieza.
+D23=Mercado. El reciclaje puede reducir las necesidades de calefacción, si se recicla el agua caliente usada
+D24=Contribuir a la gestión de la demanda de los principales suministros. Consume menos energía que la desalinización. El agua recuperada se trata según los estándares de agua potable y luego se diluye con el agua potable en la red.
+D25=Regulación. Establecimiento de estándares nacionales basados ??en la salud, que abarquen enfoques de gestión preventivos basados ??en riesgos.
+D26=Mercado. La aceptabilidad del consumidor es fundamental para la reutilización potable directa. Existen barreras significativas con respecto a la aceptación y las regulaciones del consumidor
+D27=Regulación. Incentivos para reducir la pérdida de agua y mantener niveles bajos, requisito previo para los ajustes de tarifas
+D28=Mercado. Las empresas de servicios públicos necesitan un ROI para reducir la pérdida de agua y mantener niveles bajos. Modelos innovadores de contratación y asociación que recompensan la reducción de pérdidas que cumple o supera los objetivos acordados
+D29=Eficiencia de recursos dentro de la planta de tratamiento de agua y aguas residuales (por ejemplo, ajuste del pH para usar menos coagulante)
+D30=Regulación. Eficiencia de recursos. Requisitos / estándares relacionados con la higiene del producto final (a menudo innecesariamente altos). Certificados análogos al producto primario
+D31=Mercado. Eficiencia de recursos. Como parte de los acuerdos de venta para que sea obligatorio devolver los materiales o productos químicos al proveedor después de su uso.
+D32=Lodos de agua usados ??y productos para la agricultura. Utilizar lodos de agua usados ??para producir estruvita (un mineral de fosfato libre de patógenos)
+D33=Regulación. Garantizar la seguridad mediante la inclusión de la reutilización en la legislación. Cambiar los estándares de fertilizantes, ya que son muy altos e incluso la mayoría de los fertilizantes minerales rara vez los cumplen
+D34=Mercado. Lodos de agua usados ??y productos para la agricultura. Calidad constante del producto (los compradores deben conocer la calidad)
+D35=Mercado. Lodos de agua usados ??y productos para la agricultura. Los costos crecientes de los vertederos y otras opciones térmicas pueden impulsar un mayor uso de la agricultura. Los fertilizantes y otros productos de fósforo del agua usada deben ser una solución de bajo costo para que los agricultores consideren el uso de biosólidos.
+D36=Incorporar residuos orgánicos municipales a la digestión anaeróbica. Obtener una mayor producción de biogás
+D37=Regulación. Residuos orgánicos añadidos a lodos de agua usados. Permisos locales que permiten otros materiales además de los biosólidos como recurso
+D38=Mercado. Residuos orgánicos añadidos a lodos de agua usados. Precios en otros tratamientos de residuos orgánicos y competencia de compra de residuos a otros usuarios / sectores
+D39=Lodos de agua potable para agricultura o industria. Incentivar el reciclaje de lodos procedentes de la producción de agua potable. Proporcionar agua adicional y también otra fuente de ingresos por la venta de productos químicos básicos. La cantidad varía según el tipo de agua que se esté tratando y el tipo de tratamiento, especialmente la coagulación con hierro y aluminio.
+D40=Mercado. Lodos de agua potable para agricultura o industria. Encontrar nichos de mercado adecuados. Producción de agua y químicos en plantas de tratamiento.
+D41=Regulación. Bioplásticos. Modificar la categorización de un producto como residuo o recurso. El estado o certificación del producto es una barrera principal.
+D42=Regulación. Bioplásticos. Encontrar una solución para la aceptabilidad del consumidor. Como el plástico es biodegradable y procedente de la producción de plásticos renovables tendrá una ventaja en el mercado
+D43=Regulación. Fertilizante (no agrícola). Modificar la categorización de un producto como residuo o recurso. Nutrientes extraídos del agua utilizada
+D44=Mercado. Fertilizante (no agrícola). Encontrar una solución al factor de repugnancia. Es importante tener en cuenta las oportunidades de nicho de mercado
+D45=Regulación. Papel y celulosa. Modificar la categorización de un producto como residuo o recurso. Las limitaciones a la eliminación de desechos sólidos en vertederos también podrían desencadenar una mayor recuperación
+D46=Mercado. Papel y celulosa. Aseguramiento de la calidad del material. Encontrar una solución para la aceptabilidad del consumidor. Respecto a: alto contenido de celulosa, sin patógenos / residuos de medicamentos / hormonas, bajo en metales
+D47=Regulación. Materiales de construcción. Productos enumerados o incorporados en la especificación y evaluación del producto. Productos como baldosas de hormigón
+D48=Mercado. Materiales de construcción. La calidad constante, tanto química como física, puede aportar valor
+D49=Regulación. Proteínas y piensos. Modificar la categorización de un producto como residuo o recurso.
+D50=Mercado. Proteínas y piensos. Pureza y alta densidad proteica. El producto tiene una ventaja de mercado ya que la proteína proviene de producción renovable.
+D51=Regulación. Metales y Minerales. Negociar límites de residuos en la descarga a alcantarillado. Limitación de la eliminación de metales pesados ??en vertederos
+D52=Mercado. Metales y Minerales. Minimizar el costo de disposición y costo recuperado en el metal recuperado. Garantía de calidad constante
+D53=Productos para la salud humana. Recursos utilizados recuperados para fines farmacéuticos y médicos, suplementos y productos de bienestar. Un desafío importante es que cada industria tiene diferentes indicadores, y la racionalización facilitaría el desarrollo de un mercado.
+D54=Mercado. Productos para la salud humana. Encontrar una solución al factor de repugnancia. Encontrar un nicho de mercado
+D55=Reutilización de gases efluentes. Nitrógeno amoniacal extraído del agua usada para producir sulfato de amonio
+D56=Reutilización de gases efluentes. Recuperar azufre del biogás de digestión anaeróbica. El azufre se puede utilizar como fertilizante, para la producción de caucho o como catalizador en procesos industriales.
+D57=Reutilización de gases efluentes. Metano de la digestión anaeróbica utilizado para producir energía
+D58=Reutilización de gases efluentes. Se utiliza como refrigerante, como reemplazo de ácido, para producir carbonato de calcio y como fuente de carbono para el crecimiento de algas.
+D59=Mercado. Reutilización de gases efluentes. Promocionar como libre de patógenos, esto ayuda a eliminar las barreras a la aceptabilidad del consumidor.
+D60=Optimización de operaciones en plantas de tratamiento y redes de distribución. Los sistemas inteligentes que permiten la recopilación y el análisis de datos pueden ser herramientas útiles para identificar el potencial de mejora
+D61=Regulación. Ahorro energético en plantas de tratamiento y sistemas de distribución. Impuesto / fijación de precios al carbono. Incentivos para adoptar tecnología de ahorro de energía
+D62=Reducción y recuperación de energía en el hogar. Electrodomésticos más eficientes: lavadoras, intercambiadores de calor para duchas. Medición inteligente para usuarios finales
+D63=Regulación. Reducción y recuperación de energía en casa
+D64=Electricidad producida a partir de sistemas de distribución. Agregar micro turbinas para producir energía a partir de válvulas reductoras de presión
+D65=Regulación. Electricidad y calor producidos a partir de sistemas de distribución. Legislación estatal y nacional relacionada con la eficiencia energética. Subsidios del gobierno. Financiamiento del gobierno. Impuesto sobre el carbono
+D66=Recupera el calor. Calor producido por los sistemas de distribución
+D67=Mercado. Calor producido por los sistemas de distribución. Subsidios del gobierno. Financiamiento del gobierno. Impuesto sobre el carbono
+D68=Lodos de aguas residuales tratados. Pirolisis, Combustión de biosólidos, Producción de biogás, Gasificación
+D69=Regulación. Biosólidos para la producción de energía. Legislación estatal y nacional relacionada con la eficiencia energética. Impuesto sobre el carbono
+D70=Mercado. Biosólidos para la producción de energía. Costo de rutas alternativas de manejo / eliminación. Reducción del costo de los vertederos al desviar los desechos orgánicos a la digestión. Biosólidos estabilizados para su reutilización
+D71=Las empresas de servicios públicos producen su propia energía renovable fuera de la red. Turbinas eólicas, paneles solares o geotermia
+D72=Regulación. Tributación y subvenciones relacionadas con los combustibles fósiles. Lagislación estatal y nacional relacionada con la eficiencia energética y la reducción de gases de efecto invernadero
+D73=Mercado. Costo y disponibilidad de energía renovable en comparación con los combustibles fósiles.
