Provinces texts created * Every province has Role text, goal text, fosilEnergy text, and water stress test. Every text es translated

--- a/Proyecto Investigacion - UADE/Assets/Resources/Languages/en.txt
+++ b/Proyecto Investigacion - UADE/Assets/Resources/Languages/en.txt
@@ -22,6 +22,15 @@ PROVINCE=Province
 START_GAME=Start Game
 POPULATION=>  Population:
 TOTAL_AREA=>  Total local Area:
+ROLE=> Role:
+GOVERNOR=Governor
+GOAL=> Goal:
+UNKNOWN=Unknown
+F_F_Energy=>% Fossil fuel energy:
+W_S_LEVEL=> Water stress level:
+LOW=Low
+MEDIUM=Medium
+HIGH=High
 END_MATCH=End Match
 HELP=Help!
 PLAY_AGAIN=Play Again
