--- a/Proyecto Investigacion - UADE/Assets/Resources/Languages/sp.txt
+++ b/Proyecto Investigacion - UADE/Assets/Resources/Languages/sp.txt
@@ -21,6 +21,15 @@ PROVINCE=Provincia
 START_GAME=Jugar!
 POPULATION=>  Poblacion:
 TOTAL_AREA=>  Superficie Total:
+ROLE=> Rol:
+GOVERNOR=Gobernador
+GOAL=> Objetivo:
+UNKNOWN=Desconocido
+F_F_Energy=>% Energias fosiles:
+W_S_LEVEL=> Nivel de stress hidrico:
+LOW=Bajo
+MEDIUM=Medio
+HIGH=Alto
 END_MATCH=Terminar Partida
 HELP=Ayuda!
 PLAY_AGAIN=Volver a jugar
