Fix UI + White cash bag HUD added + White clock HUD added * Game manager and HUDS interaction fix

--- a/Proyecto Investigacion - UADE/Assets/Resources/Languages/en.txt
+++ b/Proyecto Investigacion - UADE/Assets/Resources/Languages/en.txt
@@ -22,16 +22,17 @@ PROVINCE=Province
 START_GAME=Start Game
 POPULATION=>  Population:
 TOTAL_AREA=>  Total local Area:
-ROLE=> Role:
+ROLE=>  Role:
 GOVERNOR=Governor
-GOAL=> Goal:
+GOAL=>  Objective:
 UNKNOWN=Unknown
-F_F_Energy=>% Fossil fuel energy:
-W_S_LEVEL=> Water stress level:
+F_F_Energy=>  %Fossil fuel energy:
+W_S_LEVEL=>  Water stress level:
 LOW=Low
 MEDIUM=Medium
 HIGH=High
 END_MATCH=End Match
+MATCH_LEFT=Matches Left:
 HELP=Help!
 PLAY_AGAIN=Play Again
 END_GAME=End Game
