--- a/Proyecto Investigacion - UADE/Assets/Resources/Languages/sp.txt
+++ b/Proyecto Investigacion - UADE/Assets/Resources/Languages/sp.txt
@@ -21,17 +21,18 @@ PROVINCE=Provincia
 START_GAME=Jugar!
 POPULATION=>  Poblacion:
 TOTAL_AREA=>  Superficie Total:
-ROLE=> Rol:
+ROLE=>  Rol:
 GOVERNOR=Gobernador
-GOAL=> Objetivo:
+GOAL=>  Objetivo:
 UNKNOWN=Desconocido
-F_F_Energy=>% Energias fosiles:
-W_S_LEVEL=> Nivel de stress hidrico:
+F_F_Energy=>  % Energias fosiles:
+W_S_LEVEL=>  Nivel de stress hidrico:
 LOW=Bajo
 MEDIUM=Medio
 HIGH=Alto
 END_MATCH=Terminar Partida
 HELP=Ayuda!
+MATCH_LEFT=Partidas Restantes:
 PLAY_AGAIN=Volver a jugar
 END_GAME=Finalizar!
 REGULATION=Regulacion:
