--- a/Proyecto Investigacion - UADE/Assets/Resources/Languages/sp.txt
+++ b/Proyecto Investigacion - UADE/Assets/Resources/Languages/sp.txt
@@ -31,6 +31,7 @@ LOW=Bajo
 MEDIUM=Medio
 HIGH=Alto
 END_MATCH=Terminar Partida
+USED=Used:
 HELP=Ayuda!
 MATCH_LEFT=Partidas Restantes:
 PLAY_AGAIN=Volver a jugar
