UI Translation adjusted to avoid overlap on text

--- a/Proyecto Investigacion - UADE/Assets/Resources/Languages/fr.txt
+++ b/Proyecto Investigacion - UADE/Assets/Resources/Languages/fr.txt
@@ -20,18 +20,19 @@ CHOOSE=J'ai choisi
 A=ongle
 PROVINCE=Province
 START_GAME=Jouer!
-POPULATION=> Population:
-TOTAL_AREA=> Superficie totale:
-ROLE=> Rôle:
+POPULATION=>  Population:
+TOTAL_AREA=>  Superficie totale:
+ROLE=>  Rôle:
 GOVERNOR=Gouverneur
-GOAL=> Objectif:
+GOAL=>  Objectif:
 UNKNOWN=Un étranger
-F_F_Energy=>% Energies fossiles:
-W_S_LEVEL=> Niveau de stress hydrique:
+F_F_Energy=>  % Energies fossiles:
+W_S_LEVEL=>Niveau de stress hydrique:
 LOW=bas
 MEDIUM=Moyen
 HIGH=Haut
 END_MATCH=Fin du jeu
+USED=Utilisé:
 HELP=Aider!
 PLAY_AGAIN=Rejouer
 END_GAME=Finaliser!
