--- a/Proyecto Investigacion - UADE/Assets/Resources/Languages/po.txt
+++ b/Proyecto Investigacion - UADE/Assets/Resources/Languages/po.txt
@@ -20,18 +20,19 @@ CHOOSE=Escolher
 A=uma
 PROVINCE=Província
 START_GAME=Começar o jogo
-POPULATION=> População:
-TOTAL_AREA=> Área local total:
-ROLE=> Função:
+POPULATION=>  População:
+TOTAL_AREA=>  Área local total:
+ROLE=> Posto:
 GOVERNOR=Governador
-GOAL=> Objetivo:
+GOAL=>  Objetivo:
 UNKNOWN=Desconhecido
-F_F_Energy=>% De energia de combustível fóssil:
-W_S_LEVEL=> Nível de estresse hídrico:
+F_F_Energy=> % Energia fóssil:
+W_S_LEVEL=>Nível de estresse hídrico:
 LOW=Baixo
 MEDIUM=Médio
 HIGH=Alto
 END_MATCH=Fim da partida
+USED=Usava:
 HELP=Ajuda!
 PLAY_AGAIN=Jogar de novo
 END_GAME=Fim do jogo
